game description minor changes

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <h2 class="homepage-subtitle">CARD GAME</h2>
       <p class="game-description">
         Os jogos tem duração de 5 rounds. Para vencer o round você precisa
-        escolher um atributo que acredita ser maior que da carta do seu
-        oponente. Vence o jogo quem ganhar mais rounds!
+        escolher um atributo que acredita ser maior que o mesmo atributo da
+        carta do seu oponente. Vence o jogo quem ganhar mais rounds!
       </p>
       <button class="btn" id="homeBtn">Jogar</button>
     </div>
